# rustpbx

./: Cargo.toml  Cross.toml  README.md  asterisk-sip.pcap  asterisk.log1  checklist.md  config.toml  rebase_status.md  rustpbx.txt
.github/workflows/: docker-image.yml
docs/: README.md  api.md  architecture-refactor.md  media-layer-design.md
docs/en/: README.md  architecture.md  config_guide.md  playbook_advanced_features.md  playbook_tutorial.md  template_syntax_comparison.md  webrtc_sip.md
docs/en/features/: context_management.md  context_repair.md  emotion_resonance.md  http_tool.md  intent_clarification.md  rolling_summary.md  tool_instructions.md  voice_emotion.md
docs/zh/: README.md  architecture.md  config_guide.md  playbook_advanced_features.md  playbook_tutorial.md  template_syntax_comparison.md  webrtc_sip.md
docs/zh/features/: context_management.md  context_repair.md  emotion_resonance.md  http_tool.md  intent_clarification.md  rolling_summary.md  tool_instructions.md  voice_emotion.md
examples/: voice_demo.rs
locales/: en.toml  zh.toml
src/: app.rs  event.rs  main.rs
src/call/: active_call.rs
src/console/handlers/: call_record.rs
src/media/: audio_source.rs  link.rs  media_track_tests.rs  mod.rs  recorder.rs  recorder_tests.rs
src/media/tests/: perf_analysis.rs  tts_track.rs
src/media/track/: tts.rs
src/media/vad/: benchmark_all.rs
src/models/: rbac.rs
src/offline/supertonic/: processor.rs
src/proxy/: call.rs  proxy_call.rs  server.rs
src/proxy/proxy_call/: answer_runtime.rs  app_runtime.rs  bridge_runtime.rs  call_leg.rs  caller_negotiation.rs  codec_negotiation_tests.rs  dialplan_runtime.rs  dtmf_listener.rs  leg_command.rs  leg_event.rs  media_bridge.rs  media_endpoint.rs  media_peer.rs  originated_runtime.rs  playback_runtime.rs  proxy_runtime.rs  queue_flow.rs  recording_runtime.rs  reporter.rs  session.rs  session_loop_runtime.rs  sip_leg.rs  sip_session.rs  state.rs  target_runtime.rs  test_util.rs
src/rwi/: app.rs  auth.rs  call_leg.rs  gateway.rs  handler.rs  mod.rs  processor.rs  proto.rs  session.rs  types.rs
src/synthesis/: aliyun.rs  mod.rs  supertonic.rs  tencent_cloud.rs  tencent_cloud_basic.rs  tests.rs  voiceapi.rs
src/useragent/: public_address.rs  registration.rs
templates/console/: call_record_detail.html  diagnostics.html
tests/: rwi_integration_test.rs  rwi_originate_e2e_test.rs  rwi_server_test.rs
tests/helpers/: test_server.rs
