[package]
name = "active-call"
version = "0.3.48"
edition = "2024"
authors = ["jinti<shenjindi@fourz.cn>"]
description = "A SIP/WebRTC voice agent"
license = "MIT"
repository = "https://github.com/miuda-ai/active-call"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "voice-agent", "webrtc"]
categories = ["network-programming", "multimedia"]

[features]
default = ["opus", "offline"]
opus = ["dep:opusic-sys"]
offline = [
    "dep:symphonia",
    "dep:knf-rs-sys",
    "dep:ort",
    "dep:hf-hub",
    "dep:ndarray",
]
cross = ["opus", "offline", "aws-lc-rs/bindgen"]
not_vad = []

[dependencies]
libc = "0.2"
opusic-sys = { version = "0.5.8", optional = true }
audio-codec = { version = "0.3.30", features = ["opus"] }
#rustrtc = { path = "../rustrtc" }
rustrtc = "0.3.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minijinja = { version = "2.17.1", features = ["loader", "json"] }
anyhow = "1"
arc-swap = "1.8.2"
async-trait = "0.1.88"
async-stream = "0.3.6"
axum = { version = "0.8.7", features = ["ws", "tokio", "multipart"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
bytes = "1"
futures = "0.3.32"
rustls = "0.23.37"
dotenvy = "0.15.7"
clap = { version = "4.6.0", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
tokio = { version = "1.50.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.18", features = ["net", "sync"] }
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
] }
tokio-util = "0.7.18"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"
toml = "0.9.8"
rsip = "0.4.0"
rsipstack = "0.4.13"
#rsipstack = { path = "../rsipstack" }
uuid = { version = "1.22.0", features = ["v4"] }
reqwest = { version = "0.13.2", features = [
    "json",
    "stream",
    "rustls",
    "multipart",
    "form",
    "query",
    "gzip",
] }
object_store = { version = "0.13.1", features = ["aws", "azure", "gcp"] }
serde_with = "3.17.0"
rand = "0.10.0"
humantime = "2.1.0"
lru = "0.16.3"
md5 = { package = "md-5", version = "0.10.6" }
sha2 = "0.10.9"
serde_yaml = "0.9.33"
regex = "1.12.3"
once_cell = "1.21.4"
hex = "0.4.3"
nnnoiseless = "0.5.2"
hound = "3.5.1"
get_if_addrs = "0.5.3"
http = "1.4.0"
urlencoding = "2.1.3"
base64 = "0.22.1"
url = "2.5.8"
unic-emoji = "0.9.0"
socket2 = { version = "0.6.3", features = ["all"] }
realfft = "3.3"
rmp3 = "0.3"
tempfile = "3.26.0"
aws-lc-rs = "1"

# Math / arrays (keep in sync with ort 2.0.0-rc.10 -> ndarray 0.16)
ndarray = { version = "0.16.1", optional = true }
rustfft = "6.2"
num-complex = "0.4"
hf-hub = { version = "0.4.3", default-features = false, features = [
    "rustls-tls",
    "tokio",
    "ureq",
], optional = true }

ort = { version = "=2.0.0-rc.11", default-features = false, features = [
    "std",
    "ndarray",
    "tls-rustls",
    "load-dynamic",
], optional = true }
knf-rs-sys = { version = "0.3.2", optional = true }

# Audio processing for offline
symphonia = { version = "0.5", optional = true, features = ["all"] }
unicode-normalization = "0.1"
rand_distr = "0.6.0"
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.23.0"
warp = { version = "0.4.1", features = ["server", "websocket"] }
tokio-test = "0.4.5"
mockall = "0.14.0"
portpicker = "0.1.1"
dotenvy = "0.15.7"
wiremock = "0.6"
