[package]
name = "rustpbx"
version = "0.3.21"
edition = "2024"
default-run = "rustpbx"
authors = ["jinti<shenjindi@fourz.cn>"]
description = "A SIP PBX implementation in Rust"
license = "MIT"
repository = "https://github.com/restsend/rustpbx"
readme = "README.md"
keywords = ["sip", "voip", "telephony", "pbx", "webrtc"]
categories = ["network-programming", "multimedia"]

[features]
opus = ["audio-codec/opus"]
console = ["dep:minijinja"]
addon-acme = ["instant-acme"]
addon-wholesale = ["flate2", "async-compression"]
addon-archive = ["flate2"]
addon-endpoint-manager = []
addon-enterprise-auth = ["dep:ldap3", "flate2", "dep:ring"]
addon-transcript = []
addon-voicemail = []
addon-ivr-editor = []
addon-observability = ["metrics-exporter-prometheus"]
addon-telemetry = [
    "addon-observability",
    "opentelemetry",
    "opentelemetry-otlp",
    "opentelemetry_sdk",
    "tracing-opentelemetry",
]
commerce = [
    "addon-wholesale",
    "addon-endpoint-manager",
    "addon-enterprise-auth",
    "addon-voicemail",
    "addon-ivr-editor",
    "addon-telemetry",
]
default = [
    "opus",
    "console",
    "addon-acme",
    "addon-transcript",
    "addon-archive",
    "addon-observability",
]
cross = ["aws-lc-rs/bindgen"]
perfcli-bin = []
text2wav-bin = []
wav2text-bin = []

[dependencies]
instant-acme = { version = "0.8.4", optional = true }
rsip = "0.4.0"
anyhow = "1"
async-trait = "0.1.88"
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["ws", "tokio", "multipart"] }
bytes = "1"
futures = "0.3.31"
rustls = { version = "0.23.36", features = ["ring"] }
minijinja = { version = "2", features = ["loader", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
glob = "0.3.3"
serde_json = "1"
thiserror = "1"
tokio = { version = "1.49.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.18", features = ["net", "sync"] }
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-native-roots",
] }
tokio-util = "0.7.18"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4"] }
clap = { version = "4.5.54", features = ["derive"] }
toml = "0.9.8"
toml_edit = { version = "0.23.9", features = ["serde"] }
rand = "0.10.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10.4"
# Use the local rsipstack workspace copy so dialog-layer NAT contact repair
# can update per-dialog local Contact state.
rsipstack = "0.4.14"
audio-codec = { version = "0.3.30", default-features = false }
rustrtc = "0.3.33"
#rustrtc = { path = "../rustrtc" }
reqwest = { version = "0.13", features = [
    "json",
    "stream",
    "rustls",
    "multipart",
    "form",
    "query",
    "gzip",
    "blocking",
] }
base64 = "0.22.1"
hmac = "0.12"
sha2 = "0.10.9"
hex = "0.4.3"
dotenvy = "0.15.7"
md-5 = "0.10.6"
once_cell = "1.21.4"
regex = "1.12.3"
http = "1.4.0"
urlencoding = "2.1.3"
byteorder = "1.5.0"
ipnetwork = "0.21.1"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "sqlite",
    "mysql",
    "any",
] }
sea-orm = { version = "1.1.19", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-mysql",
] }
sea-orm-migration = { version = "1.1.19", features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-mysql",
] }
argon2 = { version = "0.5.3", features = ["password-hash"] }
object_store = { version = "0.13.1", features = ["aws", "azure", "gcp"] }
humantime = "2.3.0"
serde_with = "3.18.0"
async-compression = { version = "0.4", features = [
    "tokio",
    "gzip",
], optional = true }
flate2 = { version = "1", optional = true }
console-subscriber = "0.5.0"
lru = "0.16.3"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", optional = true }
# OTel stack — only pulled in for the commercial `addon-telemetry` feature.
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-otlp = { version = "0.31.0", features = [
    "grpc-tonic",
    "trace",
    "metrics",
], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = [
    "rt-tokio",
], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
phonenumber = "0.3.7"
tower-http = { version = "0.6.8", features = [
    "fs",
    "cors",
    "compression-gzip",
] }
rcgen = "0.14.7"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
csv = "1.4.0"
quick-xml = { version = "0.39.0", features = ["serialize"] }
zstd = "0.13"
hound = "3.5"
minimp3 = "0.6.1"
aws-lc-rs = { version = "1", optional = true }
totp-rs = { version = "5.7.0", features = ["qr", "gen_secret"] }
ldap3 = { version = "0.11", optional = true }
ring = { version = "0.17", optional = true }

[dev-dependencies]
tempfile = "3.24.0"
tokio-test = "0.4"
mockall = "0.14.0"
warp = { version = "0.4.1", features = ["server", "websocket"] }
portpicker = "0.1.1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
sipbot = { version = "0.2", default-features = false }

[build-dependencies]
chrono = "0.4"

[[bin]]
name = "rustpbx"
path = "src/bin/rustpbx.rs"

[[bin]]
name = "sipflow"
path = "src/bin/sipflow.rs"
required-features = ["opus"]

[[bin]]
name = "verify-i18n"
path = "tools/verify_i18n.rs"
